--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -17,24 +17,26 @@
 
     <EditText
         android:id="@+id/edittextItem"
+        style="@style/MyEditTextTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/itemHint"
         android:maxLength="15"
-        android:textColorHint="#616161"
-        style="@style/MyEditTextTheme"/>
+        android:minHeight="48dp"
+        android:textColorHint="#616161" />
 
     <EditText
         android:id="@+id/edittextCost"
+        style="@style/MyEditTextTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
+        android:hint="@string/targetHint"
         android:inputType="numberDecimal"
         android:maxLength="7"
-        android:hint="@string/targetHint"
-        android:textColorHint="#616161"
-        style="@style/MyEditTextTheme"/>
+        android:minHeight="48dp"
+        android:textColorHint="#616161" />
 
     <LinearLayout
         android:layout_width="match_parent"
