--- a/app/src/main/res/layout/change_character.xml
+++ b/app/src/main/res/layout/change_character.xml
@@ -1,42 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="4dp"
-        android:text="@string/titleChangeCharacter"
-        style="@style/ChangeCharacterActivityTextColor"
-        android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="20dp"
-        style="@style/ChangeCharacterActivityBackgroundTextViewColor" />
+        android:layout_marginBottom="16dp"
+        android:text="@string/titleSettings"
+        android:textSize="24sp" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp">
 
         <RadioButton
             android:id="@+id/griffButton"
             android:checked="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:text="@string/characterNameGriff"
             style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
@@ -44,8 +31,6 @@
             android:id="@+id/mrkrabsButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:text="@string/characterNameMrKrabs"
             style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
@@ -53,7 +38,6 @@
             android:id="@+id/mcduckButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:text="@string/characterNameScroogeMcDuck"
             style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
@@ -65,7 +49,8 @@
         android:layout_height="1dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        style="@style/ChangeCharacterActivityBackgroundTextViewColor" />
+        style="@style/ChangeCharacterActivityBackgroundTextViewColor"
+        />
 
     <CheckBox
         android:id="@+id/checkBoxEnableVibration"
@@ -73,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text="@string/checkBoxTextEnableVibrationChangeCharacter"
         android:checked="true"
-        android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
         style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
     <CheckBox
@@ -82,45 +67,45 @@
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="@string/checkBoxTextEnableSoundChangeCharacter"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="24dp"
         style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="20dp"
-        style="@style/ChangeCharacterActivityBackgroundTextViewColor" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView6"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        style="@style/ChangeCharacterActivityBackgroundTextViewColor" />-->
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/buttonCancel"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="2dp"
-            android:layout_weight="1"
-            android:text="@string/cancel"
-            style="@style/ButtonsColor"/>
+            android:layout_alignParentEnd="true"
+            android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/buttonOk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="2dp"
-            android:text="OK"
-            style="@style/ButtonsColor"/>
+            <Button
+                android:id="@+id/buttonCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:text="@string/cancel"
+                style="@style/ButtonsColor"/>
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/buttonOk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/ok"
+                style="@style/ButtonsColor"/>
 
+        </LinearLayout>
 
-
+    </RelativeLayout>
 
 </LinearLayout>
