--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
     </style>
     <style name="ChangeCharacterActivityBackgroundTextViewColor">
         <item name="android:backgroundTint">@color/black</item>
+        <item name="android:background">@color/black</item>
     </style>
     <style name="MyEditTextTheme">
         <item name="android:textColor">@color/black</item>
