--- a/app/src/main/res/layout/goalslist.xml
+++ b/app/src/main/res/layout/goalslist.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         tools:listitem="@layout/goals_item"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goalsListTitleTextView" />
