--- a/app/src/main/res/layout/goalslist.xml
+++ b/app/src/main/res/layout/goalslist.xml
@@ -20,6 +20,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_baseline_add_24"
+        style="@style/ButtonsColor"
         app:layout_constraintBottom_toBottomOf="@+id/goalsListTitleTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/goalsListTitleTextView" />
