--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -6,6 +6,17 @@
     <style name="ButtonsColor">
         <item name="android:tint">@color/mainActivityButtonsColorNight</item>
         <item name="android:backgroundTint">@color/buttonColorNight</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="ButtonsColorOutline">
+        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="strokeColor">@color/buttonColorNight</item>
+        <item name="strokeWidth">2dp</item>
     </style>
     <style name="ChangeCharacterActivityTextColor">
         <item name="android:textColor">@color/white</item>
